// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesList component no video renders correctly 1`] = `
<div
  className="catalog__movies-list"
>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Соединённые Штаты против Билли Холидей"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1302121.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1302121"
        onClick={[Function]}
      >
        Соединённые Штаты против Билли Холидей
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Неуязвимый (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1171895.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1171895"
        onClick={[Function]}
      >
        Неуязвимый (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Невероятные (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1245486.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1245486"
        onClick={[Function]}
      >
        Невероятные (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Райя и последний дракон"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1015471.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1015471"
        onClick={[Function]}
      >
        Райя и последний дракон
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Бесстыжие (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/571335.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/571335"
        onClick={[Function]}
      >
        Бесстыжие (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Happy End (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1328036.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1328036"
        onClick={[Function]}
      >
        Happy End (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Конёк-Горбунок"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1045583.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1045583"
        onClick={[Function]}
      >
        Конёк-Горбунок
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Родные"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1274271.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1274271"
        onClick={[Function]}
      >
        Родные
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Фарго (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/767379.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/767379"
        onClick={[Function]}
      >
        Фарго (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Зависнуть в Палм-Спрингс"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1245524.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1245524"
        onClick={[Function]}
      >
        Зависнуть в Палм-Спрингс
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Абсолютное доказательство"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/4430018.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/4430018"
        onClick={[Function]}
      >
        Абсолютное доказательство
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Чикатило (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1437860.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1437860"
        onClick={[Function]}
      >
        Чикатило (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Майор Гром"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1005008.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1005008"
        onClick={[Function]}
      >
        Майор Гром
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="В её глазах (мини-сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1291310.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1291310"
        onClick={[Function]}
      >
        В её глазах (мини-сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Охотник на монстров"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1038789.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1038789"
        onClick={[Function]}
      >
        Охотник на монстров
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Аферистка"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1248786.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1248786"
        onClick={[Function]}
      >
        Аферистка
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Грань времени"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1193013.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1193013"
        onClick={[Function]}
      >
        Грань времени
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Охотник за разумом (сериал)"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/958500.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/958500"
        onClick={[Function]}
      >
        Охотник за разумом (сериал)
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Звездный рубеж"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1347194.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1347194"
        onClick={[Function]}
      >
        Звездный рубеж
      </a>
    </h3>
  </article>
  <article
    className="small-movie-card catalog__movies-card"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="small-movie-card__image"
    >
      <img
        alt="Ассасин: Битва миров"
        src="https://kinopoiskapiunofficial.tech/images/posters/kp/1236082.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      <a
        className="small-movie-card__link"
        href="#/film/1236082"
        onClick={[Function]}
      >
        Ассасин: Битва миров
      </a>
    </h3>
  </article>
</div>
`;

exports[`MoviesList component with video renders correctly 1`] = `
Array [
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Соединённые Штаты против Билли Холидей"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1302121.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1302121"
          onClick={[Function]}
        >
          Соединённые Штаты против Билли Холидей
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Неуязвимый (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1171895.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1171895"
          onClick={[Function]}
        >
          Неуязвимый (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Невероятные (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1245486.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1245486"
          onClick={[Function]}
        >
          Невероятные (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Райя и последний дракон"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1015471.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1015471"
          onClick={[Function]}
        >
          Райя и последний дракон
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Бесстыжие (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/571335.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/571335"
          onClick={[Function]}
        >
          Бесстыжие (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Happy End (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1328036.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1328036"
          onClick={[Function]}
        >
          Happy End (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Конёк-Горбунок"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1045583.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1045583"
          onClick={[Function]}
        >
          Конёк-Горбунок
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Родные"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1274271.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1274271"
          onClick={[Function]}
        >
          Родные
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Фарго (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/767379.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/767379"
          onClick={[Function]}
        >
          Фарго (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Зависнуть в Палм-Спрингс"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1245524.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1245524"
          onClick={[Function]}
        >
          Зависнуть в Палм-Спрингс
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Абсолютное доказательство"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/4430018.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/4430018"
          onClick={[Function]}
        >
          Абсолютное доказательство
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Чикатило (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1437860.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1437860"
          onClick={[Function]}
        >
          Чикатило (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Майор Гром"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1005008.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1005008"
          onClick={[Function]}
        >
          Майор Гром
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="В её глазах (мини-сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1291310.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1291310"
          onClick={[Function]}
        >
          В её глазах (мини-сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Охотник на монстров"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1038789.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1038789"
          onClick={[Function]}
        >
          Охотник на монстров
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Аферистка"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1248786.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1248786"
          onClick={[Function]}
        >
          Аферистка
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Грань времени"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1193013.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1193013"
          onClick={[Function]}
        >
          Грань времени
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Охотник за разумом (сериал)"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/958500.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/958500"
          onClick={[Function]}
        >
          Охотник за разумом (сериал)
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Звездный рубеж"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1347194.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1347194"
          onClick={[Function]}
        >
          Звездный рубеж
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="small-movie-card__image"
      >
        <img
          alt="Ассасин: Битва миров"
          src="https://kinopoiskapiunofficial.tech/images/posters/kp/1236082.jpg"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="#/film/1236082"
          onClick={[Function]}
        >
          Ассасин: Битва миров
        </a>
      </h3>
    </article>
  </div>,
  <div
    className="catalog__more"
  >
    <button
      className="catalog__button"
      onClick={[Function]}
      type="button"
    >
      Больше
    </button>
  </div>,
]
`;
